# VK-API-game

./: README.md
NN_project/: CMakeLists.txt  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
VK_PARSER/: CMakeLists.txt  data.txt  main.cpp
build-NN_project-Desktop-Debug/: CMakeCache.txt  Makefile  access_key.txt  cmake_install.cmake  qtcsettings.cmake
build-NN_project-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7ff70c1fb52b31fb76dc.json  cmakeFiles-v1-75629ee62d6920bb81c6.json  codemodel-v2-ccaacfb7aec67e2d1156.json  directory-.-Debug-29ed1334b8ec93c91ee9.json  index-2023-05-20T09-10-36-0839.json  target-NN_project-Debug-471939dd7ed81a3c059d.json  target-NN_project_autogen-Debug-3e8ab9f71a4723a84052.json
build-NN_project-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-NN_project-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-NN_project-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: 32.h.3E67387E843624F7.idx  64.h.1B2DCA20315B99F7.idx  QAction.9EBFC92A8E844186.idx  QApplication.BE7D8F8286B36398.idx  QDebug.EC7861EA8B66D861.idx  QFormLayout.AD28F79423BBA781.idx  QGridLayout.59D1D81757A22F12.idx  QHBoxLayout.6AAC3D6F7BED2291.idx  QIcon.C17973F8ABC9F526.idx  QLabel.C62B23FD56E0F60F.idx  QLayout.12FAD792725A3383.idx  QLineEdit.D32C19A424F2667E.idx  QLocale.9937B83844DB81A2.idx  QMainWindow.06CAE12DF7561FDD.idx  QMenu.FA83FDD24E046450.idx  QMenuBar.AEBE6A952503B3BA.idx  QMessageBox.6D02AC31A1E0D338.idx  QPushButton.98CD60E2EBC0D7FF.idx  QRadioButton.DB0A79842D6D6B82.idx  QSpacerItem.B1661A6C2C3E2FC6.idx  QStatusBar.EE9056779C353BC8.idx  QTranslator.6E0EE17A2497BC34.idx  QVBoxLayout.22A13D243A229F9F.idx  QVariant.C3337CA1B794CEAE.idx  QWidget.4C6882AA5F235843.idx  __stddef_max_align_t.h.E19F587EDC2A7D75.idx  absolute_uri_rule.hpp.502F999DB9E73250.idx  accept.hpp.81140FF06D05D151.idx  add.hpp.EDEAB21B4E3CDC1C.idx  add_rvalue_reference.hpp.4CD12C64DC46B8F8.idx  address.hpp.1D32E8D386D5A840.idx  address.hpp.BB2CED91CB0257A7.idx  address.ipp.BF3CBAEBF4EF1504.idx  address_v4.hpp.93F2D39E09C662BA.idx  address_v4.hpp.B4FE660E71CB77F1.idx  address_v4.ipp.830A9E4C03E90A9C.idx  address_v4_iterator.hpp.0C870A81C3139525.idx  address_v4_range.hpp.411B23A2F8BDEEE6.idx  address_v6.hpp.0FEA7367A48369AF.idx  address_v6.hpp.1F21CE277F49FC80.idx  (+1602 more)
build-NN_project-Desktop-Debug/NN_project_autogen/: moc_predefs.h
build-NN_project-Desktop-Debug/NN_project_autogen/EWIEGA46WW/: moc_gamewindow.cpp  moc_gamewindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resources.cpp
build-NN_project-Desktop-Debug/NN_project_autogen/include/: ui_gamewindow.h  ui_mainwindow.h
